--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/joy": "^5.0.0-alpha.87",
     "@mui/material": "^5.13.7",
+    "dotenv": "^16.3.1",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
